--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.5.3"
   }
 }
